--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,11 @@ dependencies:
   # Image
   carousel_slider: ^4.2.1
 
+  # Webview
+  webview_flutter: ^4.0.7
+  webview_flutter_android: ^3.7.1
+  webview_flutter_wkwebview: ^3.4.4
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
